[gd_scene load_steps=3 format=3 uid="uid://cqp6ko2tjgoo4"]

[ext_resource type="Script" path="res://Scripts/SettingsMenu.gd" id="1_wllj4"]
[ext_resource type="AudioStream" uid="uid://cwrm8qwfokkw0" path="res://Sound/soft-hitnormal.wav" id="2_le5n7"]

[node name="SettingsMenu" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(384, 384)
script = ExtResource("1_wllj4")

[node name="DarkenGame" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 768.0
offset_bottom = 768.0
color = Color(0, 0, 0, 0.509804)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 704.0
pivot_offset = Vector2(384, 384)
alignment = 1

[node name="FullscreenContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 200
dragger_visibility = 2

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen
"

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer/FullscreenContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 200
dragger_visibility = 2

[node name="VSyncLabel" type="Label" parent="VBoxContainer/VSyncContainer"]
layout_mode = 2
text = "VSync"

[node name="VSyncCheckBox" type="CheckBox" parent="VBoxContainer/VSyncContainer"]
layout_mode = 2

[node name="SongVolumeContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 200
dragger_visibility = 2

[node name="SongVolumeLabel" type="Label" parent="VBoxContainer/SongVolumeContainer"]
layout_mode = 2
text = "Song Volume
"

[node name="SongVolumeHSlider" type="HSlider" parent="VBoxContainer/SongVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="HitsoundVolumeContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 200
dragger_visibility = 2

[node name="HitsoundVolumeLabel" type="Label" parent="VBoxContainer/HitsoundVolumeContainer"]
layout_mode = 2
text = "Hitsound Volume
"

[node name="HitsoundVolumeHSlider" type="HSlider" parent="VBoxContainer/HitsoundVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.005
tick_count = 5
ticks_on_borders = true

[node name="Timer" type="Timer" parent="VBoxContainer/HitsoundVolumeContainer"]
wait_time = 0.101
one_shot = true

[node name="SongSpeedContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 200
dragger_visibility = 2

[node name="SongSpeedLabel" type="Label" parent="VBoxContainer/SongSpeedContainer"]
layout_mode = 2
text = "Song Speed
"

[node name="SongSpeedHSlider" type="HSlider" parent="VBoxContainer/SongSpeedContainer"]
layout_mode = 2
max_value = 512.0
step = 64.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_le5n7")

[connection signal="toggled" from="VBoxContainer/FullscreenContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/VSyncContainer/VSyncCheckBox" to="." method="_on_v_sync_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/SongVolumeContainer/SongVolumeHSlider" to="." method="_on_song_volume_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HitsoundVolumeContainer/HitsoundVolumeHSlider" to="." method="_on_hitsound_volume_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SongSpeedContainer/SongSpeedHSlider" to="." method="_on_song_speed_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
